--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@types/node": "20.2.5",
     "@types/react": "18.2.9",
     "@types/react-dom": "18.2.4",
+    "bootstrap": "^5.3.0",
     "next": "13.4.4",
     "react": "18.2.0",
+    "react-bootstrap": "^2.7.4",
     "react-dom": "18.2.0",
+    "react-icons": "^4.9.0",
     "react-router-dom": "^6.12.1",
     "typescript": "5.1.3"
   }
