--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.12.1",
+    "react-spinners": "^0.13.8",
     "typescript": "5.1.3"
   }
 }
