--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^5.3.0",
     "next": "13.4.4",
     "react": "18.2.0",
+    "react-alice-carousel": "^2.7.1",
     "react-bootstrap": "^2.7.4",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
