--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.19.2",
+    "@stripe/react-stripe-js": "^2.3.1",
+    "@stripe/stripe-js": "^2.1.7",
     "@types/node": "20.2.5",
     "@types/react": "18.2.9",
     "@types/react-dom": "18.2.4",
     "axios": "^1.5.0",
     "bootstrap": "^5.3.0",
-    "next": "13.4.4",
+    "next": "^13.4.4",
     "react": "18.2.0",
     "react-alice-carousel": "^2.7.1",
     "react-bootstrap": "^2.7.4",
@@ -23,6 +25,7 @@
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.12.1",
     "react-spinners": "^0.13.8",
+    "stripe": "^13.10.0",
     "typescript": "5.1.3"
   }
 }
