Atualiza versao lista de arvores imagens

--- a/.env
+++ b/.env
@@ -5,5 +5,6 @@ NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY="pk_test_51NgToVBPryRcaM1rx31VsBoyOPuIoOpAcGI
 
 # NEXT_PUBLIC_API_URL="http://192.168.0.253:3001/api/"
 NEXT_PUBLIC_API_URL="https://reforest-api.onrender.com/api/"
+NEXT_PUBLIC_API_IMG_URL="https://reforest-api.onrender.com/"
 #Em Produção
 GOOGLE_API_KEY="AIzaSyACBgQShSpBeW7AX_uvGJgdGwH7EF2OovI"
